force-app/main/default/objects/Flow_Error_Log__c/Flow_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Flow Error Log</label>
    <pluralLabel>Flow Error Logs</pluralLabel>
    <description
  >Stores structured error records captured from Flow fault paths so admins and developers have queryable, human-readable visibility into Flow failures.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Log Number</label>
        <type>AutoNumber</type>
        <displayFormat>FEL-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>