force-app/main/default/objects/Flow_Error_Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <description
  >Optional JSON or free-form context payload captured at the time of failure to aid debugging.</description>
    <inlineHelpText
  >Optional. Any extra JSON or text context (input values, timestamps) that helps debug the failure.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>