force-app/main/default/objects/Flow_Error_Log__c/fields/Element_Name__c.field-meta.xml
<CustomField>
    <fullName>Element_Name__c</fullName>
    <label>Element Name</label>
    <description
  >Optional name of the Flow element or step where the fault occurred, to pinpoint the failure location.</description>
    <inlineHelpText
  >Optional. The API name of the Flow element (e.g. a Get or Update) that triggered the fault.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>