force-app/main/default/objects/Flow_Error_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <description>The captured fault message from the Flow, giving the human-readable reason the automation failed.</description>
    <inlineHelpText>The full fault message captured from the Flow. Pass {!$Flow.FaultMessage} from the fault connector.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>