force-app/main/default/objects/Flow_Error_Log__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <label>Flow API Name</label>
    <description>The API name of the Flow that hit a fault path, used to identify which automation failed.</description>
    <inlineHelpText>The API name of the Flow that generated this error (e.g. Demo_Flow_Error_Logger).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>