force-app/main/default/objects/Flow_Error_Log__c/fields/Flow_Interview_Guid__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_Guid__c</fullName>
    <label>Flow Interview GUID</label>
    <description
  >Optional Flow interview GUID used to correlate this log with a specific Flow run for tracing.</description>
    <inlineHelpText
  >Optional. The Flow interview GUID, useful for correlating multiple logs from the same run.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>