force-app/main/default/objects/Flow_Error_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <description
  >Optional Id of the record the Flow was operating on when the fault occurred, for tracing the failure back to data.</description>
    <inlineHelpText
  >Optional. The 15 or 18 character Id of the record the Flow was processing when it failed.</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>