force-app/main/default/objects/Flow_Error_Log__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <label>Running User</label>
    <description>The user under whom the Flow was running when the error occurred, for accountability and follow-up.</description>
    <inlineHelpText>The user running the Flow. Defaults to the current user when not supplied.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Flow Error Logs</relationshipLabel>
    <relationshipName>Flow_Error_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>